[package]
name = "factory"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2018"

[dependencies]
ink_primitives = { version = "3.0.0-rc1", default-features = false }
ink_metadata = { version = "3.0.0-rc1", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc1", default-features = false }
ink_storage = { version = "3.0.0-rc1", default-features = false }
ink_lang = { version = "3.0.0-rc1", default-features = false }

scale = { package = "parity-scale-codec", version = "1.3", default-features = false, features = ["derive"] }
exchange = {path = "../exchange", default-features = false, features = ["ink-as-dependency"]}
scale-info = { version = "0.4", default-features = false, features = ["derive"], optional = true }

[lib]
name = "factory"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
]
ink-as-dependency = []


[workspace]
members = [
]